# OHLC-calcutaion

./: Cargo.toml  README.md
benches/: total_time.rs
data/: ohlc-5m-b.txt
files/: output.txt
src/: input_event.rs  lib.rs  main.rs  multiset.rs  ohlc.rs  rolling_window.rs
